bugfix: max width newsletter field on mobile

--- a/SASS/components/_newsletter.scss
+++ b/SASS/components/_newsletter.scss
@@ -44,6 +44,8 @@
   }
   &__input {
     width: 100%;
+    max-width: 450px;
+    margin: 0 auto;
     height: 50px;
     font-size: 16px;
     line-height: 1.25;
